bin/tests/errors/sema/sema_err_missing_enum_value.swg
#global fileprivate

enum C: f32
{
    A // swc-expected-error {{sema_err_missing_enum_value}}
}
